Added Delete function
When the code loops through the array to creatie the list, it adds a delete button that using the index in the for each function deletes the one that is clicked

--- a/todolist.css
+++ b/todolist.css
@@ -2,3 +2,9 @@
     text-decoration: line-through;
     color: gray;
 }
+
+todoItem.button {
+    display: flex;
+    justify-content: end;
+    align-self: flex-end;
+}
